pmomax_decommission_exports/k8s_namespaces.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"labels":{"controller-tools.k8s.io":"1.0"},"name":"application-system"}}
    creationTimestamp: "2026-03-09T18:02:08Z"
    labels:
      controller-tools.k8s.io: "1.0"
      kubernetes.io/metadata.name: application-system
    name: application-system
    resourceVersion: "1773079328150015006"
    uid: 91722957-86e8-47d8-9230-11fee24c532b
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2026-03-03T21:50:18Z"
    labels:
      kubernetes.io/metadata.name: default
    name: default
    resourceVersion: "1772574618802255001"
    uid: 06aa3da2-a555-4076-847d-7d7781507bf9
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2026-03-12T19:27:15Z"
    labels:
      kubernetes.io/metadata.name: forensic-1773343635
    name: forensic-1773343635
    resourceVersion: "1773343635921919015"
    uid: cba38326-b567-4432-a7af-2d436bfc4b5e
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2026-03-12T19:31:16Z"
    labels:
      kubernetes.io/metadata.name: forensic-1773343876-ca
    name: forensic-1773343876-ca
    resourceVersion: "1773343876741583001"
    uid: 9b296656-fae9-4a0b-a55c-715b7d812a86
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      components.gke.io/component-name: managed-prometheus
      components.gke.io/component-version: 0.18.0-gke.0
      components.gke.io/layer: addon
    creationTimestamp: "2026-03-03T21:54:35Z"
    labels:
      addonmanager.kubernetes.io/mode: Reconcile
      kubernetes.io/metadata.name: gke-gmp-system
    name: gke-gmp-system
    resourceVersion: "1778501137865791021"
    uid: b5b69029-d7db-4d16-a798-9dec55a553b0
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      components.gke.io/component-name: cluster-infra-metrics
      components.gke.io/component-version: 1.35.2-gke.1
      components.gke.io/layer: addon
    creationTimestamp: "2026-03-03T21:53:26Z"
    labels:
      addonmanager.kubernetes.io/mode: Reconcile
      kubernetes.io/metadata.name: gke-managed-cim
    name: gke-managed-cim
    resourceVersion: "1778501103069599001"
    uid: 6be5d482-2ff9-4d9d-ab02-2767514d4d81
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      components.gke.io/component-name: filestorecsi
      components.gke.io/component-version: 1.35.13
      components.gke.io/layer: addon
    creationTimestamp: "2026-03-03T21:53:39Z"
    labels:
      addonmanager.kubernetes.io/mode: Reconcile
      k8s-app: gcp-filestore-csi-driver
      kubernetes.io/metadata.name: gke-managed-filestorecsi
    name: gke-managed-filestorecsi
    resourceVersion: "1778501111269391008"
    uid: ab76b853-bd3f-4871-af55-35e243a0d6a1
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      components.gke.io/component-name: networking-dra-driver
      components.gke.io/component-version: 1.35.0-gke.1
      components.gke.io/layer: addon
    creationTimestamp: "2026-05-11T12:05:48Z"
    labels:
      addonmanager.kubernetes.io/mode: Reconcile
      kubernetes.io/metadata.name: gke-managed-networking-dra-driver
    name: gke-managed-networking-dra-driver
    resourceVersion: "1778501148175599002"
    uid: 395371a4-fc18-413c-b80f-dac901e9accb
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      components.gke.io/component-name: parallelstorecsi
      components.gke.io/component-version: 1.34.10
      components.gke.io/layer: addon
    creationTimestamp: "2026-03-03T21:55:10Z"
    labels:
      addonmanager.kubernetes.io/mode: EnsureExists
      k8s-app: parallelstore-csi-driver
      kubernetes.io/metadata.name: gke-managed-parallelstorecsi
    name: gke-managed-parallelstorecsi
    resourceVersion: "1772574910519599023"
    uid: 91f5029e-0c94-4c5b-bdbb-61d53de9093c
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      components.gke.io/component-name: gke-managed-system
      components.gke.io/component-version: 0.1.1
      components.gke.io/layer: addon
    creationTimestamp: "2026-03-03T21:54:04Z"
    labels:
      addonmanager.kubernetes.io/mode: Reconcile
      kubernetes.io/metadata.name: gke-managed-system
    name: gke-managed-system
    resourceVersion: "1772574844447215010"
    uid: 2d44a15b-0c60-479d-9ecf-b7d5f40465b3
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      components.gke.io/component-name: gke-volume-populator
      components.gke.io/component-version: 1.35.2
      components.gke.io/layer: addon
    creationTimestamp: "2026-03-03T21:54:16Z"
    labels:
      addonmanager.kubernetes.io/mode: Reconcile
      k8s-app: gke-volume-populator
      kubernetes.io/metadata.name: gke-managed-volumepopulator
    name: gke-managed-volumepopulator
    resourceVersion: "1778501129669231022"
    uid: 87a9b087-d532-4736-aca1-cb4273afa535
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      components.gke.io/component-name: managed-prometheus
      components.gke.io/component-version: 0.18.0-gke.0
      components.gke.io/layer: addon
    creationTimestamp: "2026-03-03T21:54:35Z"
    labels:
      addonmanager.kubernetes.io/mode: Reconcile
      kubernetes.io/metadata.name: gmp-public
    name: gmp-public
    resourceVersion: "1778501137973151004"
    uid: def706f9-5018-41fd-bc64-f7f55b3ce437
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2026-03-03T21:50:18Z"
    labels:
      kubernetes.io/metadata.name: kube-node-lease
    name: kube-node-lease
    resourceVersion: "1772574618852447003"
    uid: e1be56a1-e62e-479d-9e3d-02dc04fbbe6f
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2026-03-03T21:50:18Z"
    labels:
      kubernetes.io/metadata.name: kube-public
    name: kube-public
    resourceVersion: "1772574618698223000"
    uid: 0d8d26ee-1e56-4858-ab61-afac85f31a7d
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2026-03-03T21:50:18Z"
    labels:
      kubernetes.io/metadata.name: kube-system
    name: kube-system
    resourceVersion: "1772574618541775004"
    uid: 8bb06c69-c7ea-4a36-bc2f-ad9eb03a8bec
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"creationTimestamp":null,"name":"pmomax"},"spec":{},"status":{}}
    creationTimestamp: "2026-03-03T21:55:47Z"
    labels:
      kubernetes.io/metadata.name: pmomax
    name: pmomax
    resourceVersion: "1773079113240111007"
    uid: 26bf8c91-7034-49b5-ba67-ae5b4999b1e7
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
kind: List
metadata:
  resourceVersion: ""
